--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,13 @@ QDRANT_URL=http://localhost:6333
 QDRANT_API_KEY=
 TEXT_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
 IMAGE_MODEL_NAME=openai/clip-vit-base-patch32
-USE_OLLAMA=false
+USE_OLLAMA=true
 OLLAMA_MODEL=llama3
 OLLAMA_URL=http://localhost:11434
+OLLAMA_TIMEOUT=300
+OLLAMA_STREAM=true
+OLLAMA_NUM_PREDICT=160
+OLLAMA_TEMPERATURE=0.2
 TESSERACT_CMD=
 DATA_DIR=data
 SQLITE_PATH=data/app.db
